# ai-is-learning

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
src/kolb_loop/: __init__.py  config.py  main.py  telemetry.py
src/kolb_loop/adapter/: __init__.py  openai_adapter.py
src/kolb_loop/curator/: __init__.py  curator.py  replay_buffer.py
src/kolb_loop/distiller/: __init__.py  concept_distiller.py
src/kolb_loop/eval_harness/: __init__.py  harness.py
src/kolb_loop/evaluator/: __init__.py  evaluator.py
src/kolb_loop/ingress/: __init__.py  api.py  app.py  proxy.py
src/kolb_loop/injector/: __init__.py  strategy_injector.py
src/kolb_loop/logger/: __init__.py  experience_logger.py
src/kolb_loop/mcp_server/: __init__.py  server.py
src/kolb_loop/memory/: __init__.py  db.py  schemas.py  vector_store.py
src/kolb_loop/orchestrator/: __init__.py  orchestrator.py
src/kolb_loop/promotion/: __init__.py  pipeline.py
src/kolb_loop/reflection/: __init__.py  engine.py
src/kolb_loop/trainer/: __init__.py  adapter_registry.py  orchestrator.py
tests/integration/: test_kolb_cycle.py  test_proxy.py
tests/unit/: test_api.py  test_config.py  test_curator.py  test_distiller.py  test_eval_harness.py  test_evaluator.py  test_injector.py  test_logger.py  test_mcp_server.py  test_models.py  test_orchestrator.py  test_proxy.py  test_reflection_engine.py  test_telemetry.py  test_trainer.py
