[project]
name = "kolb-loop"
version = "0.1.0"
description = "Self-learning AI sidecar based on David Kolb's experiential learning cycle"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "openai>=1.55",
    "duckdb>=1.1",
    "lancedb>=0.17",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "apscheduler>=3.10",
    "mcp>=1.6",
    "hdbscan>=0.8",
    "numpy>=2.1",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
    "pyyaml>=6.0",
    "python-multipart>=0.0.27",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
train = [
    "transformers>=4.47",
    "peft>=0.14",
    "trl>=0.13",
    "bitsandbytes>=0.45",
    "datasets>=3.2",
    "accelerate>=1.2",
    "safetensors>=0.4",
]
eval = [
    "lm-eval>=0.4",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
kolb-loop = "kolb_loop.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kolb_loop"]

[tool.uv]
index-url = "https://pypi.flatt.tech/simple/"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/kolb_loop --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/kolb_loop"]
omit = ["*/tests/*"]
